fix(style): scrollbar colors

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -99,11 +99,11 @@ textarea {
 }
 
 .alert-clipboard::-webkit-scrollbar {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .alert-clipboard::-webkit-scrollbar:hover {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .btn.modal {
