--- a/src/index.css
+++ b/src/index.css
@@ -56,19 +56,19 @@ code {
 }
 
 ::-webkit-scrollbar-track:hover {
-  background: rgba(255, 217, 34, 0.5);
+  background: rgba(201, 201, 201, 0.5);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 217, 34, 0.5);
-  border: solid 1px rgba(255, 217, 34, 0.75);
+  background: rgba(201, 201, 201, 0.5);
+  border: solid 1px rgba(201, 201, 201, 0.75);
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 217, 34, 1);
+  background: rgba(201, 201, 201, 1);
 }
 
 @media only screen and (min-width: 576px) {
